# imsdl

./: CMakeLists.txt
include/: align.h  arena.h  logger.h  shaders.h  viewport.h
shaders/: fragment.glsl  vertex.glsl
src/: align.c  arena.c  logger.c  main.c  shaders.c  viewport.c
